--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ python:
   - "2.7"
   - "3.3"
   - "3.4"
+  - "3.5"
 # command to install dependencies
 install:
   - pip install .
-  - pip install webtest
+  - pip install six
 # command to run tests
 script: nosetests
